[package]
name = "cargo-hot"
version = "0.1.0"
edition = "2024"
description = "Coming soon!"
license = "MIT"

[dependencies]
anyhow = "1"
ar = "0.9"
dunce = "1"
cargo = "0.88"
cargo-config2 = "0.1"
cargo_metadata = "0.20"
clap = "4.5"
color-print = "0.3"
log = "0.4"
serde_json = "1"
target-lexicon = "0.13"
tempfile = "3.20"
rayon = "1.10"
itertools = "0.14"
pdb = "0.8"
subsecond-types = "0.7.0-alpha.1"
thiserror = "2.0"
wasmparser = "0.232"
which = "7"

object.version = "0.36"
object.features = ["write_core"]

serde.version = "1"
serde.features = ["derive"]

tokio.version = "1.45"
tokio.features = ["rt-multi-thread", "io-util", "process", "macros"]

uuid.version = "1.17"
uuid.features = ["v5"]

walrus.version = "0.23"
walrus.features = ["parallel"]
