[package]
name = "cargo-hot"
version = "0.1.0"
edition = "2024"
description = "Coming soon!"
license = "MIT"

[dependencies]
anyhow = "1"
ar = "0.9"
bincode = { version = "2", features = ["serde"] }
cargo = "0.88"
cargo-config2 = "0.1"
cargo_metadata = "0.20"
clap = "4.5"
color-print = "0.3"
dunce = "1"
itertools = "0.14"
notify = "8"
pdb = "0.8"
rayon = "1.10"
serde_json = "1"
subsecond = "0.7.0-alpha.1"
subsecond-types = "0.7.0-alpha.1"
target-lexicon = "0.13"
tempfile = "3.20"
thiserror = "2.0"
tracing-subscriber = "0.3"
wasmparser = "0.232"
which = "7"

object.version = "0.36"
object.features = ["write_core"]

serde.version = "1"
serde.features = ["derive"]

tokio.version = "1.45"
tokio.features = ["rt-multi-thread", "io-util", "macros", "net", "process", "sync", "time"]

uuid.version = "1.17"
uuid.features = ["v5"]

walrus.version = "0.23"
walrus.features = ["parallel"]
tracing = "0.1.41"

[workspace]
members = ["example"]
